--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
         "Asif",
         "assest",
         "bany",
+        "Bokings",
         "Bukalapak",
         "carfuel",
         "carid",
@@ -15,6 +16,7 @@
         "carsprice",
         "carss",
         "carsseating",
+        "CUST",
         "deta",
         "Exclusice",
         "Expration",
@@ -23,6 +25,7 @@
         "filelist",
         "Firestore",
         "fuction",
+        "Hacthback",
         "heartimg",
         "hebbkx",
         "hotspot",
